test/files/invalid/bad_vector_types.stderr
error: Unsupported type
  ┌─ test/files/invalid/bad_vector_types.fbs:2:7
  │
2 │   x: [Bar];
  │       ^^^ Unions in vectors are not currently supported

error: Unsupported type
  ┌─ test/files/invalid/bad_vector_types.fbs:3:7
  │
3 │   y: [[Foo: 1]];
  │       ^^^^^^^^ Arrays in vectors are not currently supported

error: Unsupported type
  ┌─ test/files/invalid/bad_vector_types.fbs:4:7
  │
4 │   z: [[Foo]];
  │       ^^^^^ Vectors in vectors are not currently supported

